--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,10 +43,14 @@
             android:id="@+id/conditionImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@{viewModel.conditionIcon}"
             android:layout_below="@id/temperatureTextView"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="8dp"/>
+            app:layout_constraintTop_toBottomOf="@id/temperatureTextView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="8dp"
+            android:src="@{viewModel.conditionIcon}"
+            tools:ignore="UnknownId" />
 
         <TextView
             android:id="@+id/forecastTextView"
